--- a/style.css
+++ b/style.css
@@ -1,7 +1,277 @@
-*, *:before, *:after {
-    box-sizing: border-box;
-  }
-  body, h1, h2, h3, h4, h5, h6, p, ol, ul {
-    margin: 0;
-    padding: 0;
-  }
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-family: 'Avenir Next Cyr Regular';
+}
+
+@font-face {
+  font-family: 'Avenir Next Cyr Regular';
+  src: url('AvenirNextCyr-Regular.eot');
+  src: url('AvenirNextCyr-Regular.eot?#iefix') format('embedded-opentype'),
+    url('AvenirNextCyr-Regular.woff') format('woff'),
+    url('AvenirNextCyr-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* @font-face {
+  font-family: 'Avenir Next Cyr Bold';
+  src: url('AvenirNextCyr-Bold.eot');
+  src: url('AvenirNextCyr-Bold.eot?#iefix') format('embedded-opentype'),
+  url('AvenirNextCyr-Bold.woff') format('woff'),
+  url('AvenirNextCyr-Bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  } */
+
+:root {
+  --white: #fff;
+  --black: #000;
+  --bgMainLight: #40E6E6;
+  --bgMainDark: #1A488B;
+  --bodyTxt: #5C5C5C;
+
+}
+
+.container {
+  max-width: 1200px;
+  margin: 47px auto;
+  padding: 0 12px;
+
+  /* padding: 0 1; */
+
+}
+
+.header-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* margin: 0 12px; */
+}
+
+.logo-wrapper {
+  text-transform: uppercase;
+  display: flex;
+
+  height: 58px;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 58px;
+}
+
+.logo-one {
+  background: var(--bgMainLight);
+  color: var(--white);
+}
+
+.logo-two {
+  color: var(--bgMainDark);
+}
+
+/* .menu-nav{
+    display: flex;
+  } */
+.menu-nav a {
+  font-size: 18px;
+  color: var(--bodyTxt);
+  text-decoration: none;
+  margin-right: 60px;
+}
+
+.menu-nav a:hover {
+  color: var(--bgMainLight);
+}
+
+.menu-nav a:last-child {
+  margin-right: 0px;
+  /* background: red; */
+}
+
+.telephone a {
+  font-size: 22px;
+  color: var(--black);
+  text-decoration: none;
+}
+
+.displayOne-wrapper {
+  display: flex;
+}
+
+.column {
+  width: 50%;
+}
+
+.left {
+  margin-right: 50px;
+}
+
+.title {
+  font-size: 36px;
+  font-weight: 700;
+  color: var(--bgMainLight);
+  margin-bottom: 49px;
+}
+
+.title span {
+  color: var(--bgMainDark);
+}
+
+
+.subtitle {
+  font-size: 22px;
+  color: var(--bodyTxt);
+  margin-bottom: 76px;
+}
+
+.subtitle span {
+  color: var(--bgMainDark);
+  font-weight: 700;
+}
+
+.btn {
+  width: 340px;
+  height: 90px;
+  background: var(--bgMainDark);
+  border-radius: 15px;
+  color: var(--white);
+  font-size: 28px;
+  line-height: 90px;
+  text-align: center;
+  -webkit-box-shadow: 3px 3px 8px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 3px 3px 8px 2px rgba(34, 60, 80, 0.2);
+  box-shadow: 3px 3px 8px 2px rgba(34, 60, 80, 0.2);
+  transition: .5s ease;
+}
+
+.btn:hover {
+  background: var(--bgMainLight);
+
+}
+
+.column .right {}
+
+.window-video {
+  width: 600px;
+  height: 456px;
+  background: var(--white);
+  box-shadow: 0px 6px 75px rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+  position: relative;
+}
+
+.btn-play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 148px;
+  color: var(--bgMainDark);
+  transition: .5s ease;
+}
+
+.btn-play:hover {
+  color: var(--bgMainLight);
+}
+
+.working-with-wrapper {}
+
+.working-with__title {
+  font-size: 32px;
+  color: var(--bodyTxt);
+  margin-bottom: 43px;
+}
+
+.slider-wrapper {
+  width: 730px;
+  display: flex;
+  max-width: 95%;
+  margin: 20px auto;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.slider-line {
+  display: flex;
+  transform: translateX(1px);
+  margin-bottom: 60px;
+}
+
+img {
+  margin: 10px;
+}
+
+input[type=range] {
+  width: 300px;
+  margin: 0 auto;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  height: 26px;
+  border-top: 2px solid var(--bodyTxt);
+}
+
+input[type=range]::-webkit-slider-thumb {
+
+  cursor: pointer;
+  width: 26px;
+  height: 12px;
+  background: #1C427A;
+  border-radius: 43px;
+  transform: rotate(-75deg);
+  -webkit-appearance: none;
+  margin-top: -7px;
+}
+
+.tabs-wrapper {
+  padding-top: 70px;
+}
+
+.section-tabs {
+  background: #F4FAFF;
+
+
+}
+
+.tabs-title {
+
+  font-size: 48px;
+  text-align: center;
+  color: var(--bgMainDark);
+  margin-bottom: 62px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn {}
+
+.btn__tabs {
+  width: 250px;
+  height: 91px;
+  line-height: 26px;
+  font-size: 22px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+
+}
