--- a/style.css
+++ b/style.css
@@ -942,6 +942,31 @@ input[type=range]::-webkit-slider-thumb {
   font-size: 48px;
   color: var(--bodyTxt);
   display: none;
+  position: relative;
+  z-index: 120;
+}
+
+.menu-nav-burger {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background: var(--bgMainLight);
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: -47px;
+  transform: translateX(100vw);
+  transition: 2s ease-in-out;
+}
+.menu-nav-burger__active{
+  transform: translateX(0vw);
+}
+.menu-nav-burger a{
+font-size: 48px;
+text-decoration: none;
+color: var(--bodyTxt);
 }
 
 @media (max-width:1180px) {
@@ -1282,10 +1307,11 @@ input[type=range]::-webkit-slider-thumb {
   .btnCall span:nth-child(5):before {
     top: -116%;
   }
+
   .head-footer {
     justify-content: space-around;
     flex-wrap: wrap;
-}
+  }
 }
 
 @media (max-width:736px) {
@@ -1403,12 +1429,14 @@ input[type=range]::-webkit-slider-thumb {
     font-size: 13px;
     line-height: 10px;
   }
+
   .foot-footer {
     flex-direction: column;
-}
-.foot-footer-column p {
-  margin: 17px auto;
-}
+  }
+
+  .foot-footer-column p {
+    margin: 17px auto;
+  }
 }
 
 @media (max-width:568px) {
@@ -1450,7 +1478,7 @@ input[type=range]::-webkit-slider-thumb {
     margin-bottom: 15px;
   }
 
- 
+
 
   .video__item__name {
     font-size: 30px;
@@ -1496,16 +1524,19 @@ input[type=range]::-webkit-slider-thumb {
     column-count: 1;
 
   }
+
   .video__item__name {
     font-size: 20px;
-}
-.head-footer {
-  justify-content: center;
-  text-align: center;
-}
-.head-footer-column {
-  margin: auto 50px;
-}
+  }
+
+  .head-footer {
+    justify-content: center;
+    text-align: center;
+  }
+
+  .head-footer-column {
+    margin: auto 50px;
+  }
 }
 
 @media(max-width:428px) {
