--- a/style.css
+++ b/style.css
@@ -825,6 +825,7 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 .video__item {
+  position: relative;
   border-radius: 30px 30px 0px 0px;
   width: 300px;
   height: 160px;
@@ -958,10 +959,11 @@ input[type=range]::-webkit-slider-thumb {
   justify-content: space-evenly;
   margin-top: -47px;
   transform: translateX(100vw);
-  transition: 2s ease-in-out;
 }
 .menu-nav-burger__active{
   transform: translateX(0vw);
+  transition: 1s ease;
+
 }
 .menu-nav-burger a{
 font-size: 48px;
