--- a/style.css
+++ b/style.css
@@ -16,32 +16,11 @@ ol,
 ul {
   margin: 0;
   padding: 0;
-  /* font-family: 'Avenir Next Cyr Regular';  */
   font-family: 'Avenir Next Cyr', sans-serif;
 }
 
-/* @font-face {
-  font-family: 'Avenir Next Cyr Regular';
-  src: url('AvenirNextCyr-Regular.eot');
-  src: url('AvenirNextCyr-Regular.eot?#iefix') format('embedded-opentype'),
-    url('AvenirNextCyr-Regular.woff') format('woff'),
-    url('AvenirNextCyr-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-} */
 @import url('https://fonts.cdnfonts.com/css/avenir-next-cyr');
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
-
-
-/* @font-face {
-  font-family: 'Avenir Next Cyr Bold';
-  src: url('AvenirNextCyr-Bold.eot');
-  src: url('AvenirNextCyr-Bold.eot?#iefix') format('embedded-opentype'),
-  url('AvenirNextCyr-Bold.woff') format('woff'),
-  url('AvenirNextCyr-Bold.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-  } */
 
 :root {
   --white: #fff;
@@ -49,29 +28,23 @@ ul {
   --bgMainLight: #40E6E6;
   --bgMainDark: #1A488B;
   --bodyTxt: #5C5C5C;
-
 }
 
 .container {
   max-width: 1200px;
   margin: 47px auto;
   padding: 0 12px;
-
-  /* padding: 0 1; */
-
 }
 
 .header-wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* margin: 0 12px; */
 }
 
 .logo-wrapper {
   text-transform: uppercase;
   display: flex;
-
   height: 58px;
   font-size: 28px;
   font-weight: 700;
@@ -87,9 +60,6 @@ ul {
   color: var(--bgMainDark);
 }
 
-/* .menu-nav{
-    display: flex;
-  } */
 .menu-nav a {
   font-size: 18px;
   color: var(--bodyTxt);
@@ -103,7 +73,6 @@ ul {
 
 .menu-nav a:last-child {
   margin-right: 0px;
-  /* background: red; */
 }
 
 .telephone a {
@@ -139,7 +108,6 @@ ul {
   color: var(--bgMainDark);
 }
 
-
 .subtitle {
   font-size: 22px;
   color: var(--bodyTxt);
@@ -164,7 +132,6 @@ ul {
   -moz-box-shadow: 3px 3px 8px 2px rgba(34, 60, 80, 0.2);
   box-shadow: 3px 3px 8px 2px rgba(34, 60, 80, 0.2);
   transition: .5s ease;
-
   -ms-user-select: none;
   -moz-user-select: none;
   -khtml-user-select: none;
@@ -173,15 +140,11 @@ ul {
 
 .active {
   background: var(--bgMainLight);
-
 }
 
 .btn:hover {
   background: var(--bgMainLight);
-
 }
-
-.column .right {}
 
 .window-video {
   width: 600px;
@@ -206,7 +169,6 @@ ul {
   color: var(--bgMainLight);
 }
 
-.working-with-wrapper {}
 
 .working-with__title {
   font-size: 32px;
@@ -247,7 +209,6 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 
 input[type=range]::-webkit-slider-thumb {
-
   cursor: pointer;
   width: 26px;
   height: 12px;
@@ -260,18 +221,13 @@ input[type=range]::-webkit-slider-thumb {
 
 .tabs-wrapper {
   padding: 70px 0;
-
-
 }
 
 .section-tabs {
   background: #F4FAFF;
-
-
 }
 
 .tabs-title {
-
   font-size: 48px;
   text-align: center;
   color: var(--bgMainDark);
@@ -283,8 +239,6 @@ input[type=range]::-webkit-slider-thumb {
   justify-content: space-between;
 }
 
-.btn {}
-
 .btn__tabs {
   width: 250px;
   height: 91px;
@@ -293,10 +247,7 @@ input[type=range]::-webkit-slider-thumb {
   font-weight: 700;
   display: flex;
   align-items: center;
-
 }
-
-.tabs-wrapper {}
 
 .tab {
   display: none;
@@ -346,7 +297,6 @@ input[type=range]::-webkit-slider-thumb {
 
 .tabs-column-right {
   margin-left: 40px;
-
 }
 
 .window-video-tab {
@@ -358,16 +308,12 @@ input[type=range]::-webkit-slider-thumb {
   position: relative;
 }
 
-.callCenter {}
-
 .bgCallCenter {
   background-image: url(img/imagephone.png);
   background-position: calc(50% + 482px) top;
   background-repeat: no-repeat;
   background-size: 1230px;
 }
-
-.container {}
 
 .container_callCenter {
   margin-top: -47px;
@@ -405,20 +351,10 @@ input[type=range]::-webkit-slider-thumb {
   font-weight: 700;
 }
 
-.callCenterBtn {}
-
-.btn {}
-
-.manual {}
-
-.container {}
-
 .manual-title {
   font-size: 48px;
   color: var(--bgMainDark);
   font-weight: 700;
-
-  /* font-family: 'sans-serif'; */
 }
 
 .manual-wrapper {
@@ -461,7 +397,6 @@ input[type=range]::-webkit-slider-thumb {
   width: 50px;
   height: 1px;
   border-top: var(--bgMainDark) dashed 1px;
-  /* background: red; */
   display: block;
 }
 
@@ -473,7 +408,6 @@ input[type=range]::-webkit-slider-thumb {
   width: 50px;
   height: 1px;
   border-top: var(--bgMainDark) dashed 1px;
-  /* background: red; */
   display: block;
 }
 
@@ -491,7 +425,6 @@ input[type=range]::-webkit-slider-thumb {
   width: 50px;
   height: 1px;
   border-top: var(--bgMainDark) dashed 1px;
-  /* background: red; */
   display: block;
 }
 
@@ -501,10 +434,10 @@ input[type=range]::-webkit-slider-thumb {
   transform: translate(0, -47%);
 }
 
-.xxxxxx {
+/* .xxxxxx {
   width: 500px;
   height: auto;
-}
+} */
 
 .manual-item:nth-child(3)::before {
   left: 100%;
@@ -514,7 +447,6 @@ input[type=range]::-webkit-slider-thumb {
   width: 50px;
   height: 1px;
   border-top: var(--bgMainDark) dashed 1px;
-  /* background: red; */
   display: block;
 }
 
@@ -532,7 +464,6 @@ input[type=range]::-webkit-slider-thumb {
   width: 50px;
   height: 1px;
   border-top: var(--bgMainDark) dashed 1px;
-  /* background: red; */
   display: block;
 }
 
@@ -560,16 +491,6 @@ input[type=range]::-webkit-slider-thumb {
   position: relative;
 }
 
-/* .btnCall span{
-  background: red;
-  width: 28px;
-  height: 28px;
-  font-size: 10px;
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  color: black;
-} */
 .btnCall span:nth-child(1):before {
   content: '1';
   background: var(--bgMainDark);
@@ -578,7 +499,6 @@ input[type=range]::-webkit-slider-thumb {
   height: 28px;
   position: absolute;
   top: -521%;
-  /* left: 0%; */
   color: var(--white);
   line-height: 28px;
   font-size: 22px;
@@ -592,7 +512,6 @@ input[type=range]::-webkit-slider-thumb {
   height: 28px;
   position: absolute;
   top: -418%;
-  /* left: 0%; */
   color: var(--white);
   line-height: 28px;
   font-size: 22px;
@@ -606,7 +525,6 @@ input[type=range]::-webkit-slider-thumb {
   height: 28px;
   position: absolute;
   top: -318%;
-  /* left: 0%; */
   color: var(--white);
   line-height: 28px;
   font-size: 22px;
@@ -620,7 +538,6 @@ input[type=range]::-webkit-slider-thumb {
   height: 28px;
   position: absolute;
   top: -231%;
-  /* left: 0%; */
   color: var(--white);
   line-height: 28px;
   font-size: 22px;
@@ -634,7 +551,6 @@ input[type=range]::-webkit-slider-thumb {
   height: 28px;
   position: absolute;
   top: -120%;
-  /* left: 0%; */
   color: var(--white);
   line-height: 28px;
   font-size: 22px;
@@ -659,7 +575,6 @@ input[type=range]::-webkit-slider-thumb {
 .line::before {
   left: 50%;
   transform: translate(-50%, 0%);
-
   bottom: 74px;
   position: absolute;
   display: block;
@@ -669,10 +584,6 @@ input[type=range]::-webkit-slider-thumb {
   background: rgb(38, 79, 140);
   background: linear-gradient(0deg, rgba(38, 79, 140, 1) 0%, rgba(240, 252, 255, 1) 100%);
 }
-
-.mission {}
-
-.container {}
 
 .missonsMainWrapper {
   display: flex;
@@ -702,7 +613,6 @@ input[type=range]::-webkit-slider-thumb {
 
 .missons-item {
   width: 260px;
-  /* height: 180px; */
   background: var(--white);
   box-shadow: 0px 10px 45px rgba(0, 0, 0, 0.1);
   border-radius: 15px;
@@ -732,14 +642,11 @@ input[type=range]::-webkit-slider-thumb {
 
 .platform-item {
   position: relative;
-
   background: #F4FAFF;
   border-radius: 25px;
   display: flex;
   margin-bottom: 70px;
 }
-
-.platform-item__quotes {}
 
 .platform-item__img {
   height: 100%;
@@ -760,14 +667,11 @@ input[type=range]::-webkit-slider-thumb {
   top: -33%;
   color: var(--bgMainLight);
   font-family: 'Russo One', sans-serif;
-
 }
 
 .platform-item__text h3 {
   font-weight: 700;
-  /* margin-top: 55px; */
   margin-bottom: 25px;
-
 }
 
 .platform-item__text p {
@@ -779,8 +683,6 @@ input[type=range]::-webkit-slider-thumb {
   padding: 15px 0;
 }
 
-.container {}
-
 .features-wrapper {
   column-width: 400px;
   padding: 0 140px;
@@ -788,8 +690,6 @@ input[type=range]::-webkit-slider-thumb {
   column-gap: 10%;
   font-size: 22px;
   line-height: 27px;
-
-
   color: var(--bodyTxt);
 }
 
@@ -808,16 +708,11 @@ input[type=range]::-webkit-slider-thumb {
   font-size: 40px;
   font-weight: 700;
   color: var(--bgMainLight);
-
 }
 
 .featuresBtn {
   margin: 0 auto;
 }
-
-.video {}
-
-.container {}
 
 .video-wrapper {
   display: flex;
@@ -831,7 +726,6 @@ input[type=range]::-webkit-slider-thumb {
   height: 160px;
   background: var(--white);
   filter: drop-shadow(0px 10px 70px rgba(0, 0, 0, 0.1));
-
 }
 
 .video__item .btn-play {
@@ -849,15 +743,12 @@ input[type=range]::-webkit-slider-thumb {
   background: var(--white);
   border-radius: 0px 0px 30px 30px;
   filter: drop-shadow(0px 10px 70px rgba(0, 0, 0, 0.1));
-
 }
 
 .footer {
   background: #F4FAFF;
   padding-top: 50px;
 }
-
-.container {}
 
 .head-footer {
   display: flex;
@@ -868,30 +759,25 @@ input[type=range]::-webkit-slider-thumb {
 .head-footer-column {
   display: flex;
   flex-direction: column;
-
 }
 
 .head-footer-column a {
   color: var(--bodyTxt);
   text-decoration: none;
   margin-bottom: 19px;
-
 }
 
 .head-footer-column img {
   margin-bottom: 22px;
   cursor: pointer;
-
 }
 
 .head-footer-column a span {
   font-weight: 700;
-
 }
 
 .head-footer-column a:hover {
   color: var(--bgMainLight);
-
 }
 
 .footer-container {
@@ -917,12 +803,6 @@ input[type=range]::-webkit-slider-thumb {
   color: var(--bodyTxt);
 }
 
-.logo-wrapper {}
-
-.logo-one {}
-
-.logo-two {}
-
 .fa-brands {
   color: var(--bodyTxt);
   margin-right: 7px;
@@ -932,12 +812,6 @@ input[type=range]::-webkit-slider-thumb {
 .fa-brands:hover {
   color: var(--bgMainLight);
 }
-
-.fa-instagram {}
-
-.fa-twitter {}
-
-.fa-facebook {}
 
 .menu-burger {
   font-size: 48px;
@@ -960,15 +834,16 @@ input[type=range]::-webkit-slider-thumb {
   margin-top: -47px;
   transform: translateX(100vw);
 }
-.menu-nav-burger__active{
+
+.menu-nav-burger__active {
   transform: translateX(0vw);
   transition: 1s ease;
-
 }
-.menu-nav-burger a{
-font-size: 48px;
-text-decoration: none;
-color: var(--bodyTxt);
+
+.menu-nav-burger a {
+  font-size: 48px;
+  text-decoration: none;
+  color: var(--bodyTxt);
 }
 
 @media (max-width:1180px) {
@@ -1049,14 +924,11 @@ color: var(--bodyTxt);
   }
 
   .btnCall span:nth-child(5):before {
-
     top: -123%;
-
   }
 
   .missons-item {
     width: 24%;
-
   }
 }
 
@@ -1117,13 +989,8 @@ color: var(--bodyTxt);
     bottom: 15%;
   }
 
-  /* .covichki::before {
-    top: -27%;
-  } */
-
   .platform-item__text h3 {
     font-size: 16px;
-
   }
 
   .video__item,
@@ -1138,7 +1005,6 @@ color: var(--bodyTxt);
   .video__item__name {
 
     font-size: 16px;
-
   }
 }
 
@@ -1183,7 +1049,6 @@ color: var(--bodyTxt);
 
   .subtitle {
     margin-bottom: 10px;
-
   }
 
   .buttons {
@@ -1238,13 +1103,10 @@ color: var(--bodyTxt);
 
   .features-wrapper {
     padding: 0 48px;
-
   }
 
   .video__item {
-
     height: 80%;
-
   }
 
   .video__item__name {
@@ -1467,7 +1329,6 @@ color: var(--bodyTxt);
 
   .features-wrapper {
     padding: 0 0 0 48px;
-
   }
 
   .video-wrapper {
@@ -1513,18 +1374,12 @@ color: var(--bodyTxt);
     display: none;
   }
 
-  /* .platform-item__img img{
-    width: 100%;
-    height: auto;
-  } */
   .platform-item__text p {
     margin-bottom: 10px;
   }
 
   .features-wrapper {
-
     column-count: 1;
-
   }
 
   .video__item__name {
