--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ ul {
 }
 
 .container-manual {
-  padding-bottom: 25px;
+  padding: 60px 0;
 }
 
 .header-wrapper {
@@ -148,6 +148,14 @@ ul {
 }
 
 .btn:hover {
+  background: var(--bgMainLight);
+  color: #2E2E2E;
+  -webkit-box-shadow: 0px -7px 4px -2px rgba(26, 72, 139, 0.6) inset;
+  -moz-box-shadow: 0px -7px 4px -2px rgba(26, 72, 139, 0.6) inset;
+  box-shadow: 0px -7px 4px -2px rgba(26, 72, 139, 0.6) inset;
+}
+
+.btn:active {
   background: var(--bgMainLight);
   color: #2E2E2E;
   -webkit-box-shadow: 0px -7px 4px -2px rgba(26, 72, 139, 0.6) inset;
@@ -856,12 +864,12 @@ input[type=range]::-webkit-slider-thumb {
   align-items: center;
   justify-content: space-evenly;
   margin-top: -47px;
-  transform: translateX(100vw);
+  left: 100vw;
+  transition: all 1s ease;
 }
 
 .menu-nav-burger__active {
-  transform: translateX(0vw);
-  transition: 1s ease;
+  left: 0;
 }
 
 .menu-nav-burger a {
